# min-web

./: .gitignore  CNAME  LICENSE  PKGBUILD  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  sw.js  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
assets/: AuthPage-B-_9Sy9H.js  AuthPage-B40XIrUB.js  AuthPage-BFp71viW.js  AuthPage-BJve5tPn.js  AuthPage-BV0D6XTr.js  AuthPage-BWzy63Xw.js  AuthPage-BkMN2U-m.js  AuthPage-Blbd-l4G.js  AuthPage-Bmys5ilg.js  AuthPage-BnZKPsE3.js  AuthPage-BscmUic3.js  AuthPage-ByHO_lWT.js  AuthPage-C5i2cPo7.js  AuthPage-CGMLi4PT.css  AuthPage-CGRIJP0C.js  AuthPage-CGmbZc-Q.css  AuthPage-CKjfrNgW.js  AuthPage-CKpNFECi.css  AuthPage-CSXJD3Wy.css  AuthPage-CTpymFzY.js  AuthPage-Cg5ZMqxV.js  AuthPage-CgacylUb.css  AuthPage-CnZrNFCl.js  AuthPage-CtqaGxaN.js  AuthPage-CvFH5SNh.css  AuthPage-D2xmbZCM.js  AuthPage-DBoNlxAR.js  AuthPage-DYz6ZR6e.js  AuthPage-DhK8WBN3.js  AuthPage-DiUzpD_J.js  AuthPage-Dm6AZIoo.js  AuthPage-DpmXpX0t.js  AuthPage-JWuucH5O.js  AuthPage-LttYZ1Hx.css  AuthPage-P8pYgnJH.css  AuthPage-RIIxiDkg.js  AuthPage-Skl4Gm3M.js  AuthPage-UmQeHOkV.js  AuthPage-knWdcSq5.js  AuthPage-zD6EbUF6.js  (+138 more)
src/: App.module.scss.d.ts  App.tsx  Min.Desktop_0.7.0_amd64.deb  client.ts  env.d.ts  index.module.scss  index.scss  main.tsx  translation.ts  types.d.ts
(+92 files in other folders)
